# CodexUsageMonitor

./: .gitignore  CMakeLists.txt  README-zh.md  README.md  build.cmd
.github/workflows/: build.yml
docs/superpowers/specs/: 2026-07-12-asset-glass-interaction-design.md  2026-07-12-liquid-glass-codex-widget-design.md  2026-07-13-interaction-refresh-font-icon-design.md  2026-07-13-taskbar-drag-hover-fix-design.md  2026-07-13-usage-data-and-taskbar-mode-design.md
src/: AppBarWindow.cpp  AppBarWindow.h  AppVersion.h  CodexUsageFetcher.cpp  CodexUsageFetcher.h  JsonLite.cpp  JsonLite.h  WidgetPresentation.cpp  WidgetPresentation.h  main.cpp
tests/: WidgetPresentationTests.cpp  verify_source_contract.ps1
